--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -15,6 +15,9 @@
                 <h1>Barack Obama</h1>
             </header>
             <div class="content">
+                <div id="articles_timeline" class="articles_timeline timeline hidden"></div>
+                <svg id="months_timeline" class="months_timeline bar_graph_timeline timeline hidden"></svg>
+                <svg id="years_timeline" class="years_timeline bar_graph_timeline timeline hidden"></svg>
             </div>
         </div>
 
